[package]
name = "manta-rs"
version = "0.1.0"
authors = ["David Cao <david@cao.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"

[profile.release]
# opt-level = 'z'  # Optimize for size.
lto = true
# codegen-units = 1
panic = 'abort'